--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,13 +5,16 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="19"
+        android:minSdkVersion="21"
         android:targetSdkVersion="22" />
+    
+    <uses-permission android:name="android.permission.BODY_SENSORS"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/apptheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
